<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/frontLayout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/txt_crash_log"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/txt_logs_of_fatal_exceptions_and_throwable"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>


    <RelativeLayout
        android:layout_below="@+id/frontLayout"
        android:id="@+id/expandable_spinner"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="48dp"
        android:paddingStart="@dimen/dialog_padding">

        <ImageView
            android:id="@+id/expand_button"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_down_24"
            android:contentDescription="@string/todo" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/expand_button"
            android:gravity="center_vertical"
            android:text="@string/txt_show_crash_log"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.github.aakira.expandablelayout.ExpandableLinearLayout
        android:id="@+id/expandable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/expandable_spinner"
        android:orientation="vertical"
        app:ael_expanded="false"
        app:ael_duration="5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false"
                android:paddingStart="@dimen/dialog_padding"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/detail_error"
                    style="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dialog_padding"
                    android:text="@string/txt_crash_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:textIsSelectable="true"
                    android:textSize="12sp" />
            </ScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />
        </RelativeLayout>

    </com.github.aakira.expandablelayout.ExpandableLinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandable_layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNegative"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/click_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:text="@string/btn_txt_cancel" />
    </LinearLayout>

</RelativeLayout>