<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.mrkaz.crashreporter.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:tint="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_cr_logo_transparent"
            android:contentDescription="@string/todo" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="Crash\nReporter"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_icon"
        android:contentDescription="@string/todo"
        android:paddingTop="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="30dp"
        android:src="@drawable/ic_cr_logo_transparent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:tint="@color/black" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnCheckLogs"
            style="@style/Custom.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btn_txt_check_crash_logs"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnIndexOut"
                style="@style/Custom.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_hazard_warning_flasher"
                android:drawableTint="@color/black"
                android:text="@string/btn_txt_index_out_bound"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnArray"
                style="@style/Custom.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_hazard_warning_flasher"
                android:drawableTint="@color/black"
                android:text="@string/bnt_txt_array_exception"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnClassCast"
                style="@style/Custom.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_hazard_warning_flasher"
                android:drawableTint="@color/black"
                android:text="@string/btn_txt_class_cast"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnNullPointer"
                style="@style/Custom.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_hazard_warning_flasher"
                android:drawableTint="@color/black"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/btn_txt_null_pointer"
                android:textColor="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/btnClearLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableTint="@color/text_color"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/btn_txt_clear_crash_logs"
            android:textColor="@color/text_color"
            android:visibility="gone"
            app:backgroundTint="@color/button_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>